# aumos-energy-sustainability

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml
src/aumos_energy_sustainability/: __init__.py  main.py  settings.py
src/aumos_energy_sustainability/adapters/: __init__.py  carbon_api_client.py  csrd_reporter.py  efficiency_optimizer.py  energy_router.py  gpu_monitor.py  green_scorer.py  inference_optimizer.py  kafka.py  model_compressor.py  multi_backend_carbon_client.py  offset_integrator.py  repositories.py  sustainability_reporter.py
src/aumos_energy_sustainability/api/: __init__.py  router.py  schemas.py
src/aumos_energy_sustainability/core/: __init__.py  interfaces.py  models.py  services.py
src/aumos_energy_sustainability/migrations/: 001_initial_schema.sql
tests/: __init__.py  test_services.py
